# slurmtop

./: .pre-commit-config.yaml  LICENCE  LICENSE  README.md  pyproject.toml
src/slurmtop/: __init__.py  _app.py  _data.py  _info.py  _info_widget.py  _sinfo.py  _sinfo_widget.py  _squeue.py  _squeue_widget.py  app.css  app.py
